# rust-mimiio

./: Cargo.toml  play.sh  run.sh
src/: lib.rs  main.rs
