[package]
name = "rust-mimiio"
version = "0.2.0"
authors = ["emergent <yosikawa@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {version="1.0", features=["full"]}
anyhow = "1.0.33"
structopt = "0.3.20"
futures = "0.3.7"
http = "0.2.1"
futures-util = "0.3.8"
futures-channel = "0.3.8"
env_logger = "0.8.2"
log = "0.4.13"
tokio-tungstenite = {version="0.13.0", features=["tls"]}
