[package]
name = "rust-mimiio"
version = "0.2.1"
authors = ["emergent <yosikawa@gmail.com>"]
edition = "2018"

[dependencies]
tokio = {version="1.8", features=["full"]}
anyhow = "1.0.41"
structopt = "0.3.21"
futures = "0.3.15"
http = "0.2.4"
futures-util = "0.3.15"
futures-channel = "0.3.15"
env_logger = "0.8.4"
log = "0.4.14"
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
